src/test/ui/unboxed-closures/unboxed-closures-static-call-wrong-trait.stderr
error[E0599]: no method named `call` found for type `[closure@$DIR/unboxed-closures-static-call-wrong-trait.rs:6:26: 6:31]` in the current scope
  --> $DIR/unboxed-closures-static-call-wrong-trait.rs:7:10
   |
LL |     mut_.call((0, ));
   |          ^^^^
   |
   = note: mut_ is a function, perhaps you wish to call it

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
